# QuantPulse

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  INTRO.md  LESSONS.md  Makefile  PERFORMANCE.md  QUANTPULSE_FINAL_SPEC.md  README.md  SAFETY.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  supervisord.conf  worker.py
.cursor/rules/: quantpulse-frontend.mdc  quantpulse-project.mdc  quantpulse-python.mdc  quantpulse-strategies.mdc
.github/workflows/: ci.yml
backend/: config.py  logging_config.py  main.py  pipeline.py  progress.py  redis_client.py  scheduler.py
backend/adaptive/: __init__.py  hold_periods.py  kelly_adaptive.py  pair_params.py  regime_calibration.py  risk_scaling.py  scheduler.py  stops.py  targets.py  thresholds.py  vol_context.py  weight_interpolation.py
backend/ai/: analyst.py  market_ai.py
backend/alerts/: __init__.py  channels.py  dispatcher.py  types.py
backend/api/: ai_endpoint.py  analyzer.py  backtest.py  envelope.py  errors.py  journal.py  news.py  overnight.py  pipeline_status.py  portfolio.py  regime.py  router.py  scanner.py  sectors.py  swing_picks.py
backend/backtest/: seeder.py
backend/data/: __init__.py  cache.py  cross_asset.py  fetcher.py  rate_limiter.py  refresh_scheduler.py  sentiment_cache.py  ticker_intelligence.py  universe.py
backend/middleware/: auth.py  error_tracking.py  request_logging.py
backend/migrations/: 001_init.sql
backend/models/: __init__.py  database.py  schemas.py
backend/prompts/: __init__.py  action_banner.txt  allocation_explain.txt  dcf_explain.txt  dcf_valuation.txt  entry_timing.txt  invest_research.txt  market_summary.txt  news_summary.txt  overnight_scanner.txt  picks_summary.txt  portfolio_review.txt  regime_probs.txt  scan_summary.txt  signal_explain.txt  stock_analysis.txt  stock_picker.txt  swing_invest.txt  swing_rank.txt  swing_summary.txt  ticker_picker.txt  timing_tip.txt
backend/regime/: __init__.py  detector.py  indicators.py  transitions.py
backend/risk/: __init__.py  correlation.py  kelly.py  manager.py  tail_hedge.py  var.py
backend/signals/: __init__.py  cointegration.py  cross_asset_signals.py  dcf.py  decay_monitor.py  earnings.py  microstructure.py  revisions.py  sentiment.py  tradability.py
backend/strategies/: __init__.py  base.py  catalyst_event.py  cross_asset_momentum.py  flow_imbalance.py  gap_reversion.py  stat_arb.py
backend/tasks/: queue.py  state.py  worker.py
backend/tracker/: __init__.py  shadow_evidence.py  signal_audit.py  strategy_health.py  strategy_performance.py  trade_journal.py
backend/websocket/: manager.py  routes.py
backtest/: __init__.py  reports.py  statistical_tests.py  transaction_costs.py  walk_forward.py
decisions/: 001-quarter-kelly-sizing.md  002-five-regimes-not-three.md  003-human-in-the-loop-not-auto-execute.md  004-adaptive-parameters-no-hardcoded-thresholds.md  005-why-claude-for-market-analysis.md
design-system/quantpulse/: MASTER.md
frontend/: app.py
frontend-next/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  railway.toml
nlp/: finbert_sentiment.py
scripts/: calibrate_kelly.py  find_pairs.py  regime_backtest.py  run_backtest.py  seed_universe.py
tests/: conftest.py  conftest_api.py
tests/test_api/: conftest.py  test_auth.py  test_envelope.py  test_errors.py  test_health.py  test_rate_limiting.py
(+75 files in other folders)
