[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quantpulse"
version = "2.0.0"
description = "Institutional-grade multi-strategy quantitative trading advisory system"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",

    # Data
    "yfinance>=0.2.36",
    "pandas>=2.2",
    "numpy>=1.26",

    # Quant / Stats
    "scipy>=1.12",
    "statsmodels>=0.14",
    "hurst>=0.0.5",
    "arch>=6.2",

    # ML / NLP
    "transformers>=4.38",
    "torch>=2.2",
    "vaderSentiment>=3.3",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",

    # Scheduling
    "apscheduler>=3.10",

    # Config
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",

    # Alerts (optional)
    "slack-sdk>=3.27",

    # Visualization
    "plotly>=5.18",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]
prod = [
    "sendgrid>=6.11",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["backend*", "backtest*", "nlp*", "frontend*", "scripts*"]
