[project]
name = "quantpulse"
version = "2.0.0"
description = "Institutional-grade multi-strategy quantitative trading advisory system"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "httpx>=0.27",
    # Data
    "yfinance>=1.2",
    "pandas>=2.2",
    "numpy>=2.0",
    # Quant / Stats
    "scipy>=1.12",
    "statsmodels>=0.14",
    # ML / NLP
    "transformers>=4.38",
    "torch>=2.2",
    "vaderSentiment>=3.3",
    # Database
    "supabase>=2.0",
    "redis>=5.0",
    # Task Queue
    "arq>=0.26",
    # Scheduling
    "apscheduler>=3.10",
    # Config
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    # HTTP / Scraping
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    # Auth
    "PyJWT>=2.8",
    # Rate Limiting
    "slowapi>=0.1.9",
    # Migrations
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    # Alerts (optional)
    "slack-sdk>=3.27",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]
prod = [
    "sendgrid>=6.11",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Supabase SDK has loose return types (dict | DataFrame | None)
# that cause cascading false positives across the codebase
not-subscriptable = "ignore"
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
unresolved-import = "ignore"
invalid-return-type = "warn"
call-non-callable = "warn"
no-matching-overload = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
